some cosmetics related to jpro